--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gourmet AI - Seu Chef Virtual</title>
+    <title>Eai Chef?- Seu Chef Virtual</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <a href="/" class="logo">GOURMET AI</a>
+            <a href="/" class="logo">Eaí Chefe?</a>
             <nav>
                 <a href="#history" id="show-history-link">Minhas Últimas Receitas</a>
             </nav>
