--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
@@ -28,7 +27,7 @@
                 <p>Diga o que você tem na geladeira e descubra pratos deliciosos em segundos.</p>
             </div>
 
-            <form id="ingredient-form" method="POST" action="{% url 'generate_recipe' %}">
+            <form id="ingredient-form" method="POST" action="{% urls 'generate_recipe' %}">
                 {% csrf_token %}
                 <div class="form-group">
                     <label for="ingredients">Digite seus ingredientes, separados por vírgula</label>
@@ -60,6 +59,6 @@
 
     </main>
 
-    <script src="{% static '/js/main.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
